--- a/frontend/core/src/main/webapp/static/app/tasks/tasksSlides.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksSlides.html
@@ -1,6 +1,6 @@
 <div ng-show="isFeatureActive('tasks')" class="swiper-container main-slides" swiper-container="tasks" swiper-type="main" expected-slides="(isLoading && 1) || (!isLoading && 3)">
-  <div class="swiper-wrapper" ng-class="getIsWebkitScrolling() ? 'webkit-scrolling' : 'no-webkit-scrolling'" register-element-to-feature="tasks" register-element-to-feature-swiper="tasks">
-    <div class="swiper-slide" swiper-slide="tasks/home" slide-index=0 ng-include="'static/app/tasks/timeline.html'" register-element-to-feature="tasks" register-element-to-feature-snap="left"></div>
+  <div class="swiper-wrapper" ng-class="getIsWebkitScrolling() ? 'webkit-scrolling' : 'no-webkit-scrolling'">
+    <div class="swiper-slide" swiper-slide="tasks/home" slide-index=0 ng-include="'static/app/tasks/timeline.html'" drawer-handle="left"></div>
     <div ng-if="!isLoading" class="swiper-slide" swiper-slide="tasks/contexts" slide-index=1 ng-include="'static/app/tasks/contexts.html'"></div>
     <div ng-if="!isLoading" class="swiper-slide" swiper-slide="tasks/details" slide-index=2 ng-include="'static/app/tasks/context.html'"></div>
   </div>
