page title is now static (bug with dynamic title!)

--- a/frontend/cordova/app/merges/ios/index.html
+++ b/frontend/cordova/app/merges/ios/index.html
@@ -23,7 +23,7 @@
   <meta name="fragment" content="!" />
   <meta name="format-detection" content="telephone=no" />
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0"/>
-  <title ng-bind="page.getTitle()"></title>
+  <title>extended mind</title>
   <link rel="stylesheet" href="static/css/em.css"/>
   <script src="cordova.js"></script>
   <script>
