--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -7,7 +7,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="msapplication-tap-highlight" content="no" />
-  <title ng-bind="pageTitle.getTitle()"></title>
+  <title>extended mind</title>
   <link rel="stylesheet/less" href="static/less/em.less"/>
   <script src="static/lib/less/less-min.js"></script>
   <link rel="shortcut icon" href="landing/favicon.ico"/>
