--- a/frontend/cordova/app/merges/android/index.html
+++ b/frontend/cordova/app/merges/android/index.html
@@ -23,7 +23,7 @@
   <meta name="fragment" content="!" />
   <meta name="format-detection" content="telephone=no" />
 
-  <title ng-bind="page.getTitle()"></title>
+  <title>extended mind</title>
 
   <style type="text/css">
     @font-face {
