--- a/frontend/core/src/main/webapp/index.html
+++ b/frontend/core/src/main/webapp/index.html
@@ -8,7 +8,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="msapplication-tap-highlight" content="no" />
-  <title ng-bind="page.getTitle()"></title>
+  <title>extended mind</title>
   <style type="text/css">
     @import url("//hello.myfonts.net/count/2a91b5");
     @font-face {font-family: 'HelveticaNeueLTStd-Lt';src: url('static/fonts/2A91B5_0_0.eot');src: url('static/fonts/2A91B5_0_0.eot?#iefix') format('embedded-opentype'),url('static/fonts/2A91B5_0_0.woff') format('woff'),url('static/fonts/2A91B5_0_0.ttf') format('truetype');}
