--- a/frontend/core/src/main/webapp/static/app/notes/notesSlides.html
+++ b/frontend/core/src/main/webapp/static/app/notes/notesSlides.html
@@ -1,5 +1,5 @@
 <div ng-show="isFeatureActive('notes')" class="swiper-container main-slides" swiper-container="notes" swiper-type="main" expected-slides="3">
-  <div class="swiper-wrapper" ng-class="getIsWebkitScrolling() ? 'webkit-scrolling' : 'no-webkit-scrolling'" register-element-to-feature="notes" register-element-to-feature-swiper="notes">
+  <div class="swiper-wrapper" register-element-to-feature="notes" register-element-to-feature-swiper="notes">
     <div class="swiper-slide" swiper-slide="notes/home" slide-index=0 ng-include="'static/app/notes/recent.html'" register-element-to-feature="notes" register-element-to-feature-snap="left"></div>
     <div class="swiper-slide" swiper-slide="notes/keywords" slide-index=1 ng-include="'static/app/notes/keywords.html'"></div>
     <div class="swiper-slide" swiper-slide="notes/details" slide-index=2 ng-include="'static/app/notes/keyword.html'"></div>
