--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -1,7 +1,7 @@
 <div ng-show="isFeatureActive('inbox')" class="single-page-container" ng-controller="InboxController" data-snap-ignore="{{onboardingInProgress ? true : undefined}}">
   <section id="inbox" class="two-column-grid single-page page" register-element-to-feature="inbox" register-element-to-feature-snap="left">
     <div class="column">
-      <div ng-if="!isLoading" class="page-content-container single-page-content-container">
+      <div ng-if="!loading" class="page-content-container single-page-content-container">
         <div class="scroll-container" scroll-to>
           <div class="accordion-wrapper">
             <div class="inner-page-content-container" accordion>
@@ -39,7 +39,7 @@
           </footer>
         </div>
       </div>
-      <div ng-if="isLoading" class="loading-animation" loading-animation></div>
+      <div ng-if="loading" class="loading-animation" loading-animation></div>
     </div>
     <aside class="column">
       TODO
