--- a/frontend/core/src/main/webapp/static/app/tasks/timeline.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/timeline.html
@@ -1,6 +1,6 @@
 <section id="tasks-timeline" class="two-column-grid page" ng-controller="DatesController">
   <div class="column">
-    <div ng-if="!isLoading" class="page-content-container">
+    <div ng-if="!loading" class="page-content-container">
       <div ng-if="isDatepickerVisible" class="swiper-no-swiping" data-snap-ignore="true" datepicker></div>
       <div class="swiper-container" swiper-container="tasks/home" swiper-type="page" expected-slides="7">
         <div class="swiper-wrapper">
@@ -37,7 +37,7 @@
         </div>
       </div>
     </div>
-    <div ng-if="isLoading" class="loading-animation" loading-animation></div>
+    <div ng-if="loading" class="loading-animation" loading-animation></div>
   </div>
   <aside class="column">
     TODO
